já não dá erros, orientar cenas agora. cliente pede a diretoria e liga a servidor. ainda só testado com 1 servidor e 1 cliente

--- a/Trabalho de PD/nbproject/project.properties
+++ b/Trabalho de PD/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/Trabalho_de_PD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.Trabalho_de_PD_Servidor.jar=C:\\Users\\Carlos Oliveira\\Documents\\PD\\Trabalho-de-PD-Servidor\\Trabalho de PD Servidor\\dist\\Trabalho_de_PD_Servidor.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Trabalho_de_PD_Servidor.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
