--- a/Trabalho de PD/nbproject/project.properties
+++ b/Trabalho de PD/nbproject/project.properties
@@ -29,11 +29,10 @@ dist.jar=${dist.dir}/Trabalho_de_PD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.Trabalho_de_PD_Servidor.jar=C:\\Users\\Carlos Oliveira\\Documents\\PD\\Trabalho-de-PD-Servidor\\Trabalho de PD Servidor\\dist\\Trabalho_de_PD_Servidor.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.Trabalho_de_PD_Servidor.jar}
+    ${reference.Trabalho_de_PD_Servidor.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,6 +62,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.Trabalho_de_PD_Servidor=../../Trabalho-de-PD-Servidor/Trabalho de PD Servidor
+reference.Trabalho_de_PD_Servidor.jar=${project.Trabalho_de_PD_Servidor}/dist/Trabalho_de_PD_Servidor.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
